move to nx static

--- a/src/admin/components/clients/edit-client.html
+++ b/src/admin/components/clients/edit-client.html
@@ -22,6 +22,10 @@
                        value="{{tel}}" class="mdl-textfield__input" type="text" id="tel"/>
                 <label class="mdl-textfield__label" for="tel">TELEFONO</label>
             </div>
+            <div class="mdl-textfield mdl-js-textfield">
+                <textarea #notes class="mdl-textfield__input" type="text" rows="5" id="notes" >{{notes}}</textarea>
+                <label class="mdl-textfield__label" for="notes">NOTAS</label>
+            </div>
             </p>
         </div>
         <div class="mdl-dialog__actions mdl-dialog__actions--full-width">
