--- a/src/admin/components/events/template.html
+++ b/src/admin/components/events/template.html
@@ -97,6 +97,7 @@
         </div>
     </div>
     <div #calendar class="mdl-shadow--2dp mdl-cell mdl-cell--12-col calendar-wrapper">
+        <div #hour_line></div>
         <div #julia class="calendar-item">
         </div>
         <div #virginia class="calendar-item">
