--- a/src/admin/components/history/template.html
+++ b/src/admin/components/history/template.html
@@ -27,6 +27,15 @@
                     VALORACION GOOGLE (BUENAVENTURA)
                 </output>
             </li>
+            <li class="mdl-menu__item">
+                <output
+                        onclick="this.form.sendGoogleReviewEmail(3)"
+                        class="mdl-color-text--grey-700"
+                        style="display: block;">
+                    <i style="vertical-align: middle;" class="material-icons">email</i>
+                    VALORACION GOOGLE (PUERTANUEVA)
+                </output>
+            </li>
         </ul>
 
         <button type="button"
