--- a/src/admin/components/homePage/level2.html
+++ b/src/admin/components/homePage/level2.html
@@ -49,6 +49,10 @@
                         <td>BUENAVENTURA</td>
                         <td>{{cashBuenaventura}}</td>
                     </tr>
+                     <tr>
+                        <td>PUERTANUEVA</td>
+                        <td>{{cashPortanueva}}</td>
+                    </tr>
                 </table>
             </div>
         </div>
