--- a/src/admin/components/clients/clients-list.html
+++ b/src/admin/components/clients/clients-list.html
@@ -6,7 +6,7 @@
                 ondragleave="this.form.dragLeave()"
                 ondragover="this.form.dragOver()"
                 ondrop="this.form.drop()">
-            {{this.online}} {{this.name}} {{this.surname}}
+            {{this.online}} {{this.name}} {{this.surname}} ({{this.user}})
             <a style="    display: inline-block;background-color: {{this.emailBgColor}};padding: 0 4px;
     border-radius: 7px;height: 22px;line-height: 20px;" href="mailto:{{this.email}}">{{this.email}}</a>
             <em>{{this.formattedTel}}</em>
